--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -4,11 +4,12 @@
 
     </div>
     <div class="col-xs-7">
-        <app-recipe-detail *ngIf = "selectedRecipe; else infoText"
+        <!-- <app-recipe-detail *ngIf = "selectedRecipe; else infoText"
         [recipe]="selectedRecipe"></app-recipe-detail>
         <ng-template #infoText>
             <p>Select a recipe!</p>
         </ng-template>
-        
+         -->
+         <router-outlet></router-outlet>
     </div>
 </div>
